# plist-server

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md  Taskfile.yml
src/: main.rs
src/controller/: gen_plist.rs  index.rs  mod.rs
src/data/: mod.rs  plist_query.rs  plist_template.rs
